Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28655

REG-> Qt Creator 10.0.0-beta1 (9.0.82) 4947c5c657
: C++ indenter is broken

    XMLWordPrintable

Details

    • Linux/X11
    • e193d02a7 (master)

    Description

      C++ indentation no longer works, pressing Enter always goes to position 0.

      Steps to reproduce:

      • Create new project from wizard
      • Press Enter in main() to insert a line
      • Note: No indentation, cursor at 0

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-28655
        # Subject Branch Project Status CR V

        Activity

          People

            artem.sokolovskii Artem Sokolovskii (Inactive)
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes