ClangFormat: Fix no style for a new project

Fixes: QTCREATORBUG-28655
Change-Id: I44794125cfb0e4f24dc9a573fa0f9bb29f4c2e2b
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>